--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <html>
 <head>
-  <title>test site</title>
+  <title>hoppfull</title>
+  <link rel="stylesheet" type="text/css" href="xss.css" />
+  <style type="text/css"></style>
 </head>
 <body>
   hello world!!
